oprav shit, pridej mapku

--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
       základě svých pracovních zkušeností jsem poznala, že chci pečovat o klienta komplexně. Mám dvě děti. Zážitek
       mateřství mě inspiroval věnovat se ženám a dětem.
     </p>
-    <a href="sluzby.html">
+    <a href="sluzby.html#regenerace">
       <div class="banner_left">
         <h2>Regenerace a rekondice</h2>
         Individuální terapie
       </div>
     </a>
-    <a href="sluzby.html">
+    <a href="sluzby.html#cviceni">
       <div class="banner_right">
         <h2>Cvičení</h2>
         Regabilitační cviky a jóga
       </div>
     </a>
-    <a href="sluzby.html">
+    <a href="sluzby.html#skupiny">
       <div class="banner_left">
         <h2>Skupinové cvičení</h2>
         Cvičení pro ženy a děti
       </div>
     </a>
-    <a href="sluzby.html">
+    <a href="sluzby.html#poradenstvi">
       <div class="banner_right">
         <h2>Poradenství</h2>
         Rady v oblasti zdravého pohybu
