--- a/kontakt.html
+++ b/kontakt.html
@@ -26,7 +26,11 @@
       e-mail: <a href="mailto:eva.hlusickova@gmail.com">eva.hlusickova@gmail.com</a>
     </p>
     <p>
-      Terapii poskytuji v centru Avasa.
+      Terapii poskytuji v <a href="http://www.avasa.cz/">centru Avasa,</a> poblíž metra Florenc.<br>
+      Křižíkova 308/19, Praha 8<br>
+    </p>
+    <p>
+      <iframe style="border:none" src="https://frame.mapy.cz/s/jatukegaku" width="400" height="280" frameborder="0"></iframe>
     </p>
     <p>
       Cena terapie / konzultace je uvedena v sekci Služby.
