--- a/sluzby.html
+++ b/sluzby.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="text_area">
-    <div class="h2_left">
+    <div class="h2_left" id="regenerace">
       <h2>Regenerace a rekondice:</h2>
     </div>
     <h3>Terapie pro ženy:</h2>
@@ -51,9 +51,9 @@
         Využívám těchto konceptů: <a href="omne.html">kurzy</a><br>
         Cena terapie je 850,- Kč/ 60 min.
       </p>
-      <div class="h2_left">
+      <div class="h2_left" id="cviceni">
         <h2>Cvičení</h2>
-      </div>      
+      </div>
       <h3>Pro ženy:</h3>
       <p>Cvičení vede k harmonii těla a mysli. Provozováním cvičení můžete předcházet problémům (bolestem, onemocněním
         pohybového aparátu, nadváze) a léčit již existující. Zvýší se vaše sebeúcta a sebedůvěra. Sestava cviků je
@@ -72,10 +72,10 @@
       </p>
       <h3>Pro děti:</h3>
       <p>Viz výše - terapie dětí</p>
-      
-      <div class="h2_left">
+
+      <div class="h2_left" id="skupiny">
         <h2>Skupinová cvičení:</h2>
-      </div>  
+      </div>
       <h3>Ženské semináře</h3>
       <p>
         Skupinové cvičení je otevřené všem ženám. Můžete chodit pravidelně, nebo příležitostně. Přijďte zažít podporu
@@ -103,15 +103,15 @@
         Menší skupinka 4-5 dětí, individuální přístup.<br>
         Cena za půlroku je:
       </p>
-      <div class="h2_left">
+      <div class="h2_left" id="poradenstvi">
         <h2>Poradenství</h2>
       </div>
       <p>
-      Chcete svou situaci změnit a zatím nevíte, jak na to. Nabízíme vám poradenství
-      V oblasti zdravého životního stylu - Bc. Eva Hlušičková
-      V oblasti..........
-      Cena konzultace je stanovena terapeutem a je vám řečena při telefonickém objednání.
-    </p>
+        Chcete svou situaci změnit a zatím nevíte, jak na to. Nabízíme vám poradenství
+        V oblasti zdravého životního stylu - Bc. Eva Hlušičková
+        V oblasti..........
+        Cena konzultace je stanovena terapeutem a je vám řečena při telefonickém objednání.
+      </p>
   </div>
 
 
