add deployable version

--- a/kontakt.html
+++ b/kontakt.html
@@ -24,20 +24,27 @@
       Bc. Eva Hlušičková<br>
       Mob.: 792 208 080<br>
       e-mail: <a href="mailto:eva.hlusickova@gmail.com">eva.hlusickova@gmail.com</a>
-    </p>
+    </p>  
     <p>
-      Terapii poskytuji v <a href="http://www.avasa.cz/">centru Avasa,</a> poblíž metra Florenc.<br>
+      Cena terapie / konzultace je uvedena v sekci <a href="sluzby.html">služby</a>.<br>
+      Terapie musí být zaplacena nejpozději 24 hod. před konánín na číslo účtu: <b>2500885692/2010</b><br>
+      Storno méně než 24 hodin před terapií je 50 % původní ceny.
+    </p>  
+    <h3>
+      Terapii poskytuji na těchto místech:      
+    </h3>
+    <p>
+      Ženské domovy, Ostrovského 253/3, Praha 5      
+    </p>
+    <iframe style="border:none" src="https://frame.mapy.cz/s/kevedoceru" width="400" height="280" frameborder="0"></iframe>
+     <p> 
+      <a href="http://www.avasa.cz/">Centrum Avasa,</a> poblíž metra Florenc.<br>
       Křižíkova 308/19, Praha 8<br>
     </p>
     <p>
       <iframe style="border:none" src="https://frame.mapy.cz/s/jatukegaku" width="400" height="280" frameborder="0"></iframe>
     </p>
-    <p>
-      Cena terapie / konzultace je uvedena v sekci Služby.
-      Terapie musí být zaplacena nejpozději 24 hod. před konánín na číslo účtu:<br>
-      <b>2500885692/2010</b><br>
-      Storno méně než 24 hodin před terapií je 50 % původní ceny.
-    </p>
+
 </body>
 
 </html>
