--- a/omne.html
+++ b/omne.html
@@ -29,7 +29,7 @@
       <ul>
         <li>Tanec a kontaktní improvizace u Zity Pavlištové</li>
         <li>cesta Mohendžodára – ženská tantrajóga</li>
-        <li>poradenství u Lavanyi</li>
+        <li>poradenství u <a href="https://www.alchymiesrdce.cz/" target="_blank">Lavanyi</a></li>
       </ul>
       Na cestě pomáhat mě nejvíce ovlivnily dětské tábory.
     </p>
@@ -43,7 +43,7 @@
       <li>Kurz Terapie pánevního dna vedený spolu s psycholožkou a taneční terapeutkou Klárou Čížkovou</li>
     </ul>
     </p>
-    <h3>Kurzy a semináře:</h3>
+    <h3 id="kurzy">Kurzy a semináře:</h3>
     <p>
       <ul>
       <li>McKenzie mechanická diagnostika a terapie hybného systému, certifikovaný kurz
