--- a/sluzby.html
+++ b/sluzby.html
@@ -33,7 +33,7 @@
           <li>při bolestech (menstruační, pohybového aparátu, způsobené poruchou v nervovém systému, aj.)</li>
           <li>při snaze změnit svoje tělesné vnímání, zvýšit pohyblivost, pružnost a stabilitu</li>
         </ul>
-        Využívám těchto konceptů: <a href="omne.html">kurzy</a><br>
+        Využívám těchto konceptů: <a href="omne.html#kurzy">kurzy</a><br>
         Cena terapie je 850,- Kč / 60 min.
       </p>
       <h3>Terapie dětí:</h3>
@@ -48,8 +48,8 @@
           <li>rozvoj jemné a hrubé motoriky</li>
           <li>podpora symetrie těla a upravení držení těla (u dětí se skoliózou a vadným držením těla)</li>
         </ul>
-        Využívám těchto konceptů: <a href="omne.html">kurzy</a><br>
-        Cena terapie je 850,- Kč/ 60 min.
+        Využívám těchto konceptů: <a href="omne.html#kurzy">kurzy</a><br>
+        Cena terapie je 850,- Kč / 60 min.
       </p>
       <div class="h2_left" id="cviceni">
         <h2>Cvičení</h2>
@@ -57,7 +57,7 @@
       <h3>Pro ženy:</h3>
       <p>Cvičení vede k harmonii těla a mysli. Provozováním cvičení můžete předcházet problémům (bolestem, onemocněním
         pohybového aparátu, nadváze) a léčit již existující. Zvýší se vaše sebeúcta a sebedůvěra. Sestava cviků je
-        individuální dle vstupního vyšetření klientky (pohledem).
+        individuální dle vstupního vyšetření klientky.
         Těšit se můžete na:
         <ul>
           <li>jógové asány</li>
@@ -68,30 +68,15 @@
         </ul>
         Cvičení je vhodné např. v těhotensví, v šestinedělí, při břišní diastáze, při potížích s otěhotněním, při
         bolestivé menstruaci a v klimakteriu.<br>
-        Cena terapie je 850,- Kč/ 60 min.
+        Cena terapie je 850,- Kč / 60 min.
       </p>
-      <h3>Pro děti:</h3>
-      <p>Viz výše - terapie dětí</p>
 
       <div class="h2_left" id="skupiny">
         <h2>Skupinová cvičení:</h2>
       </div>
       <h3>Ženské semináře</h3>
       <p>
-        Skupinové cvičení je otevřené všem ženám. Můžete chodit pravidelně, nebo příležitostně. Přijďte zažít podporu
-        ženského kruhu. Jsou vítány ženy v jakémkoliv životním období a jakémkoliv věku...<br>
-        Ve skupinovém cvičení se zaměřuji na
-        <ul>
-          <li>jógové asány</li>
-          <li>tanec</li>
-          <li>sdílení</li>
-        </ul>
-        Jako fyzioterapeutka vnímám provádění cviků ženami a opravuji je. Zohledňuji při výběru cviků daný stav ženy
-        (těhotenství, po porodu, atd.).<br>
-        Využívám tance pro uvolnění emocí a celkové naladění se na sebe i na skupinu. Jde o individuální projev, který
-        je
-        neuvěřitelně osvobozující a ozdravný.<br>
-        Cena za jednotlivou lekci: 200,- Kč, za pololetí 1800,- Kč
+        Připravuje se...
       </p>
       <h3>Pro děti</h3>
       <p>
@@ -101,16 +86,15 @@
         Cvičení probíhá hravou formou, všestranně rozvíjí tělo, kompenzuje nedostatek pohybu,
         navíc je prevencí vadného držení těla a skolióz.<br>
         Menší skupinka 4-5 dětí, individuální přístup.<br>
-        Cena za půlroku je:
+        V případě zájmu mě <a href="kontakt.html">kontaktujte</a>.
       </p>
       <div class="h2_left" id="poradenstvi">
         <h2>Poradenství</h2>
       </div>
       <p>
-        Chcete svou situaci změnit a zatím nevíte, jak na to. Nabízíme vám poradenství
-        V oblasti zdravého životního stylu - Bc. Eva Hlušičková
-        V oblasti..........
-        Cena konzultace je stanovena terapeutem a je vám řečena při telefonickém objednání.
+        Chcete svou situaci změnit a zatím nevíte, jak na to? Nabízím vám poradenství
+        v oblasti zdravého životního stylu. Poradenství je buď součást terapie, nebo samostatně.<br>
+        Cena samostatné služby je 450,- Kč / 30min.
       </p>
   </div>
 
